Fix iframe on mobile

--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -14,6 +14,10 @@
     .hirer p {
         line-height: 27.9px;
     }
+
+    .max-width-50-pc-md-up {
+        max-width: 50%;
+    }
 }
 
 @media (min-width: 768px) {
